[gd_scene load_steps=10 format=3 uid="uid://t4y2dg4wo0a1"]

[ext_resource type="Script" uid="uid://bfxevppkmcc3o" path="res://src/UI/MainUI/main_ui.gd" id="1_633n5"]
[ext_resource type="PackedScene" uid="uid://by7mcwuv62vv0" path="res://src/UI/UpgradeMenu/upgrade_menu.tscn" id="2_633n5"]
[ext_resource type="PackedScene" uid="uid://dfl6qpxnh8bbk" path="res://src/UI/ClickBar/click_bar_chain.tscn" id="3_bwggr"]
[ext_resource type="PackedScene" uid="uid://do66aqj36f31t" path="res://src/UI/ProgressionBar/skill_bar_ui.tscn" id="4_633n5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xsymy"]
bg_color = Color(0.301961, 0.301961, 0.301961, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_633n5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bwggr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t2x7g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8e6pk"]

[node name="MainUI" type="Control" node_paths=PackedStringArray("upgrade_menu", "sync_click_bars", "click_bar_chain")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_633n5")
upgrade_menu = NodePath("VBoxContainer/TopContainer/HBoxContainer/UpgradeMenu")
sync_click_bars = NodePath("VBoxContainer/TopContainer/HBoxContainer/MarginContainer/SyncClickBars")
click_bar_chain = NodePath("VBoxContainer/CenterContainer/HBoxContainer/ClickBarChain")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xsymy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TopContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TopContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="SyncClickBars" type="Button" parent="VBoxContainer/TopContainer/HBoxContainer/MarginContainer" groups=["ui_buttons"]]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 2
text = "Synchroniser
"

[node name="UpgradeMenu" parent="VBoxContainer/TopContainer/HBoxContainer" instance=ExtResource("2_633n5")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/TopContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
theme_override_styles/separator = SubResource("StyleBoxEmpty_633n5")

[node name="CenterContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
theme_override_styles/separator = SubResource("StyleBoxEmpty_bwggr")

[node name="ClickBarChain" parent="VBoxContainer/CenterContainer/HBoxContainer" instance=ExtResource("3_bwggr")]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
theme_override_styles/separator = SubResource("StyleBoxEmpty_t2x7g")

[node name="BottomContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BottomContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="ShowInfosCheckButton" type="CheckButton" parent="VBoxContainer/BottomContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 8
size_flags_stretch_ratio = 0.3
mouse_default_cursor_shape = 2
theme_override_constants/h_separation = 5
theme_override_font_sizes/font_size = 25
text = "Infos "
alignment = 1
expand_icon = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/BottomContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
theme_override_styles/separator = SubResource("StyleBoxEmpty_8e6pk")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BottomContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="SkillBarUI" parent="VBoxContainer/BottomContainer/HBoxContainer/MarginContainer" instance=ExtResource("4_633n5")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.9

[node name="BackToMenu" type="Button" parent="VBoxContainer/BottomContainer/HBoxContainer" groups=["ui_buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
size_flags_stretch_ratio = 0.3
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "Retour au menu"

[connection signal="pressed" from="VBoxContainer/TopContainer/HBoxContainer/MarginContainer/SyncClickBars" to="." method="_on_sync_click_bars_pressed"]
[connection signal="toggled" from="VBoxContainer/BottomContainer/HBoxContainer/ShowInfosCheckButton" to="." method="_on_show_infos_check_button_toggled"]
[connection signal="pressed" from="VBoxContainer/BottomContainer/HBoxContainer/BackToMenu" to="." method="_on_back_to_menu_pressed"]
